2006-01-29  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteXML.py (write_place_obj): Always write ptitle.
	* src/GrampsDb/_ReadXML.py: Prase file and ptitle tags.
	* example/gramps/example.gramps: Update XML example.
	* src/Exporter.py: Set initial person in case there's no active.
	* src/ViewManager.py (find_initial_person): Remove method.
	* src/GrampsDb/_GrampsDbBase.py (find_initial_person): Add method.

2006-01-28  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: hook up event ref editor

2006-01-28  Alex Roitman  <shura@gramps-project.org>
	* src/GnomeMime.py: Import neede modules.
	* doc/grampsxml.dtd: Events preceed people.
	* doc/grampsxml.rng: Events preceed people.
	* src/GrampsDb/_WriteXML.py: Events preceed people.
	* src/GrampsDb/_ReadXML.py: Parse old and new style events, old
	witnesses, new eventrefs.

2006-01-28  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: add SourceRefModel, NameEmbedList, 
	AddrEmbedList
	* src/EditPerson.py: Use new EmbedLists
	* src/ViewManager.py: set max value on set_fraction
	* src/edit_person.glade: remove old lists
	* src/GrampsDb/_ReadGedcom.py: fix types
	* src/EditFamily.py: fix variable names
	* src/GrampsDb/_GrampsBSDDB.py: qualify strxfrm

2006-01-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Typo.
	* src/GrampsDb/_GrampsBSDDB.py: Correct duplicate event IDs on upgrade.
	* src/GrampsDb/_WriteXML.py: More XML updates.

	* doc/grampsxml.dtd: Update to reflect new XML.
	* src/GrampsDb/_ReadGedcom.py (parse_repo_ref_caln): Properly set
	media type.
	* src/GrampsDb/_WriteXML.py: More XML updates.
	* doc/grampsxml.rng: Update to reflect new XML.

	* src/GrampsDb/_GrampsBSDDB.py: Typos.
	* src/GrampsDb/_WriteXML.py: Minor corrections.
	* doc/grampsxml.rng: Updates.
	* example/gramps/example.gramps: New XML example.

2006-01-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcomp.py: preselect gramps ids for events
